--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@eslint/js": "^9.13.0",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -28,6 +32,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.1",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.13",
     "typescript": "~5.6.2",
