--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "styled-components": "^6.1.13",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "zustand": "^5.0.1"
   }
 }
