--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "globals": "^15.11.0",
     "install": "^0.13.0",
     "npm": "^10.9.1",
+    "react-hook-form": "^7.53.2",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.13",
     "typescript": "~5.6.2",
