--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || '--yes' }}
+          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' }}
           working-directory: ./
