--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-  if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/3.0.0'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/3.0.0'
     runs-on: ubuntu-latest
 
     steps:
@@ -30,5 +30,5 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' }}
+          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' || ''}}
           working-directory: ./
