--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main #프로덕션 배포
-      - release/3.0.0 # preview 배포
+      - release/3.0.0
+      - release/3.1.0
+      - release/3.2.0
 
 jobs:
   deploy:
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/3.0.0'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/3.0.0' || github.ref == 'refs/heads/release/3.1.0' || github.ref == 'refs/heads/release/3.2.0'
     runs-on: ubuntu-latest
 
     steps:
@@ -30,5 +32,5 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' }}
+          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' || github.ref == 'refs/heads/release/3.1.0' && '--yes'||  github.ref == 'refs/heads/release/3.2.0' && '--yes' }}
           working-directory: ./
