--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main #프로덕션 배포
       - release/3.0.0
-      - release/3.1.0
-      - release/3.2.0
 
 jobs:
   deploy:
@@ -32,5 +30,5 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' || github.ref == 'refs/heads/release/3.1.0' && '--yes'||  github.ref == 'refs/heads/release/3.2.0' && '--yes' }}
+          vercel-args: ${{ github.ref == 'refs/heads/main' && '--prod --yes' || github.ref == 'refs/heads/release/3.0.0' && '--yes' }}
           working-directory: ./
